Fix bug 39417 - Scrollbars appear for ULS regions
Modified overflow property to avoid vertical scrollbars.

--- a/css/jquery.uls.css
+++ b/css/jquery.uls.css
@@ -77,7 +77,7 @@
 	bottom: 2px;
 	position: absolute;
 	font-size: 13px;
-	overflow-x: hidden;
+	overflow: hidden;
 	text-overflow: ellipsis;
 	width: 100%;
 }
